fix: text overflow when collection name is big

--- a/inertia/components/dashboard/collection/list/collection_list.module.css
+++ b/inertia/components/dashboard/collection/list/collection_list.module.css
@@ -14,8 +14,6 @@
 }
 
 .collectionList {
-	padding: 1px;
-	padding-right: 5px;
 	display: flex;
 	flex: 1;
 	gap: 0.35em;
