--- a/inertia/components/dashboard/link/item/link.module.css
+++ b/inertia/components/dashboard/link/item/link.module.css
@@ -2,9 +2,8 @@
 	user-select: none;
 	cursor: pointer;
 	width: 100%;
-	background-color: light-dark(var(--mantine-color-gray-1), rgb(50, 58, 71));
-	padding: 0.75em 1em;
-	border-radius: var(--border-radius);
+	background-color: light-dark(var(--mantine-color-white), rgb(50, 58, 71));
+	padding: 0.5em 0.75em !important;
 	border: 1px solid transparent;
 }
 
@@ -12,32 +11,9 @@
 	border: 1px solid var(--mantine-color-blue-4);
 }
 
-.linkHeader {
-	display: flex;
-	gap: 1em;
-	align-items: center;
-}
-
-.linkName {
-	width: 100%;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow: hidden;
-}
-
-.linkDescription {
-	margin-top: 0.5em;
-	font-size: 0.8em;
-	word-wrap: break-word;
-}
-
 .linkUrl {
-	width: 100%;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow: hidden;
-	font-size: 0.8em;
-	transition: opacity 0.3s;
+	max-width: calc(100% - 50px);
+	transition: opacity 0.15s;
 }
 
 .linkWrapper:hover .linkUrlPathname {
@@ -46,5 +22,5 @@
 
 .linkUrlPathname {
 	opacity: 0;
-	transition: opacity 0.3s;
+	transition: opacity 0.15s;
 }
